HD-7: Fix GitHub Actions & set java version to 17 (#8)